# testez-companion-cli

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  state.rs  testez.rs
src/api/: logs.rs  mod.rs  poll.rs  results.rs
