[package]
name = "testez-companion-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jack T <jack@jackt.space>"]
description = "CLI for TestEZ Companion"
repository = "https://github.com/jacktabscode/testez-companion-cli"
homepage = "https://github.com/jacktabscode/testez-companion-cli"
readme = "README.md"

[dependencies]
axum = "0.7.5"
axum-server = "0.6.0"
clap = { version = "4.5.4", features = ["derive"] }
console = { version = "0.15.8", features = ["ansi-parsing"] }
dashmap = "5.5.3"
inquire = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
