[package]
name = "testez-companion-cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Jack T <jack@jackt.space>"]
description = "CLI for TestEZ Companion"
repository = "https://github.com/jacktabscode/testez-companion-cli"
homepage = "https://github.com/jacktabscode/testez-companion-cli"
readme = "README.md"

[dependencies]
axum = "0.7.5"
axum-server = "0.6.0"
clap = { version = "4.5.4", features = ["derive"] }
console = { version = "0.15.8", features = ["ansi-parsing"] }
dashmap = "5.5.3"
inquire = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "skip"
windows-archive = ".zip"
unix-archive = ".zip"
